// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/drafts/panel/panel_header should match snapshot 1`] = `
<div
  className="PanelHeader"
>
  <div
    className="PanelHeader__left"
  >
    <div>
      title
    </div>
  </div>
  <div
    className="PanelHeader__right"
  >
    <div
      className="PanelHeader__actions"
    >
      <div>
        actions
      </div>
    </div>
    <div
      className="PanelHeader__info"
    >
      <div
        className="PanelHeader__timestamp"
      >
        <Connect(injectIntl(Timestamp))
          day="numeric"
          units={
            Array [
              "now",
              "minute",
              "hour",
              "day",
              "week",
              "month",
              "year",
            ]
          }
          useSemanticOutput={false}
          useTime={false}
          value={1970-01-01T00:00:12.345Z}
        />
      </div>
      <Memo(Tag)
        text="draft"
        uppercase={true}
        variant="danger"
      />
    </div>
  </div>
</div>
`;

exports[`components/drafts/panel/panel_header should show sync icon when draft is from server 1`] = `
<div
  className="PanelHeader"
>
  <div
    className="PanelHeader__left"
  >
    <div>
      title
    </div>
  </div>
  <div
    className="PanelHeader__right"
  >
    <div
      className="PanelHeader__actions"
    >
      <div>
        actions
      </div>
    </div>
    <div
      className="PanelHeader__info"
    >
      <div
        className="PanelHeader__sync-icon"
      >
        <WithTooltip
          title={
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Updated from another device"
              id="drafts.info.sync"
            />
          }
        >
          <SyncIcon
            size={18}
          />
        </WithTooltip>
      </div>
      <div
        className="PanelHeader__timestamp"
      >
        <Connect(injectIntl(Timestamp))
          day="numeric"
          units={
            Array [
              "now",
              "minute",
              "hour",
              "day",
              "week",
              "month",
              "year",
            ]
          }
          useSemanticOutput={false}
          useTime={false}
          value={1970-01-01T00:00:12.345Z}
        />
      </div>
      <Memo(Tag)
        text="draft"
        uppercase={true}
        variant="danger"
      />
    </div>
  </div>
</div>
`;
